[gd_scene load_steps=6 format=3 uid="uid://pjm2ecnrpxs7"]

[ext_resource type="Script" path="res://doors/door.gd" id="1_fhhi3"]
[ext_resource type="Texture2D" uid="uid://d3bga2snyfd3y" path="res://textures/door.png" id="2_xpdu8"]
[ext_resource type="Texture2D" uid="uid://baea2a1fwy41d" path="res://textures/enter.png" id="3_8f5am"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w0yem"]
size = Vector2(46, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xdmcn"]
size = Vector2(56, 23)

[node name="Door" type="Area2D"]
script = ExtResource("1_fhhi3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 35)
shape = SubResource("RectangleShape2D_w0yem")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xpdu8")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 18.5)
shape = SubResource("RectangleShape2D_xdmcn")

[node name="EnterIcon" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_8f5am")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
